RESOLVED FIXED282592
:root CSS container breaks history navigation with back-forward cache
https://bugs.webkit.org/show_bug.cgi?id=282592
Summary :root CSS container breaks history navigation with back-forward cache
David Bushell
Reported 2024-11-05 00:32:39 PST
Created attachment 473142 [details] Recording on :root container history navigation issue (using iPhone mirroring) Applying a CSS container on the `:root` or `html` element breaks history navigation on iOS and iPadOS Safari. For example: :root { container: root / inline-size; } After navigating pages, using "Forward" or "Back" history buttons will show a blank page. Steps to reproduce: 1. Visit test website: https://ios-webkit-root-container-bug.pages.dev/ 2. Navigate to another page on the website 3. Click "Back" history button in iOS/iPadOS Safari The previous page fails to render (see attached video). This happens on iOS & iPadOS Safari 18.1, macOS is unaffected.
Attachments
Recording on :root container history navigation issue (using iPhone mirroring) (196.73 KB, video/mp4)
2024-11-05 00:32 PST, David Bushell
no flags
Radar WebKit Bug Importer
Comment 1 2024-11-05 15:47:55 PST Comment hidden (obsolete)
Antti Koivisto
Comment 2 2024-11-12 05:05:49 PST
Antti Koivisto
Comment 3 2024-11-12 05:20:33 PST
EWS
Comment 4 2024-11-12 09:17:18 PST
Committed 286487@main (c0e31be07ba8): <https://commits.webkit.org/286487@main> Reviewed commits have been landed. Closing PR #36523 and removing active labels.
Darin Adler
Comment 5 2024-11-17 08:54:36 PST
*** Bug 263582 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.