:root CSS container breaks history navigation with back-forward cache https://bugs.webkit.org/show_bug.cgi?id=282592 rdar://120951698

Reviewed by Anne van Kesteren.

* LayoutTests/fast/css/root-container-back-forward-expected.html: Added.
* LayoutTests/fast/css/root-container-back-forward.html: Added.
* Source/WebCore/dom/Element.cpp:
(WebCore::Element::invalidateForResumingQueryContainerResolution):

When restoring a page with the document element as a container from the back-forward cache we may fail
to compute style for its descedants. This happens because the child invalidity bit is not set and
we think the tree is clean.

Fix by setting the child invalidty bit when invalidating container queries for resume.

Canonical link: https://commits.webkit.org/286487@main